[gd_scene load_steps=18 format=3 uid="uid://h7cmiyni163d"]

[ext_resource type="Texture2D" uid="uid://cyj2lvgpsd3pb" path="res://Graphics/background.png" id="1_7rbpx"]
[ext_resource type="Script" path="res://Scripts/audio_manager.gd" id="1_g1b28"]
[ext_resource type="FontFile" uid="uid://da6e1h5sqwp1d" path="res://Fonts/ComicMono.ttf" id="1_nkrhu"]
[ext_resource type="Texture2D" uid="uid://dqbjf6r66hlsa" path="res://Graphics/desk_coffee.png" id="2_27qff"]
[ext_resource type="FontFile" uid="uid://cvid4ags1chph" path="res://Fonts/ComicMono-Bold.ttf" id="4_js4eg"]
[ext_resource type="Script" path="res://Scenes/ExitSettings.gd" id="5_2tkfi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kuy5w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t8cf1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r7dki"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o2qm1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yo46w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_70d5n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mfvvb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ni7o3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_unw1p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q3iv1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6e476"]

[node name="CenterContainer" type="Node2D"]

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("1_7rbpx")

[node name="Desk" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("2_27qff")

[node name="Label" type="Label" parent="."]
offset_left = 460.0
offset_top = 105.0
offset_right = 1460.0
offset_bottom = 177.0
theme_override_fonts/font = ExtResource("1_nkrhu")
theme_override_font_sizes/font_size = 64
text = "Settings"
horizontal_alignment = 1

[node name="X" type="Button" parent="."]
offset_left = 1789.0
offset_top = 69.0
offset_right = 1845.0
offset_bottom = 149.0
theme_override_fonts/font = ExtResource("4_js4eg")
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxEmpty_kuy5w")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_t8cf1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_r7dki")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_o2qm1")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_yo46w")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_70d5n")
theme_override_styles/hover = SubResource("StyleBoxEmpty_mfvvb")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_ni7o3")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_unw1p")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_q3iv1")
theme_override_styles/normal = SubResource("StyleBoxEmpty_6e476")
text = "X"
script = ExtResource("5_2tkfi")

[node name="BGM Volume Label2" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 904.0
offset_top = 520.0
offset_right = 1002.0
offset_bottom = 561.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_nkrhu")
theme_override_font_sizes/font_size = 36
text = "Music"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BGM Volume" type="HSlider" parent="."]
clip_contents = true
offset_left = 1095.0
offset_top = 500.0
offset_right = 1395.0
offset_bottom = 516.0
rotation = -1.5708
max_value = 1.0
step = 0.01
value = 0.8
tick_count = 11
script = ExtResource("1_g1b28")

[node name="SFX Volume Label3" type="Label" parent="."]
offset_left = 1075.0
offset_top = 520.0
offset_right = 1134.0
offset_bottom = 561.0
theme_override_fonts/font = ExtResource("1_nkrhu")
theme_override_font_sizes/font_size = 36
text = "SFX"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFX Volume" type="HSlider" parent="."]
clip_contents = true
offset_left = 945.0
offset_top = 500.0
offset_right = 1245.0
offset_bottom = 516.0
rotation = -1.5708
max_value = 1.0
step = 0.01
value = 0.8
tick_count = 11
script = ExtResource("1_g1b28")

[node name="Master Volume Label" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 744.0
offset_top = 520.0
offset_right = 862.0
offset_bottom = 561.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_nkrhu")
theme_override_font_sizes/font_size = 36
text = "Master"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Master Volume" type="HSlider" parent="."]
clip_contents = true
offset_left = 795.0
offset_top = 500.0
offset_right = 1095.0
offset_bottom = 516.0
rotation = -1.5708
max_value = 1.0
step = 0.01
value = 0.8
tick_count = 11
script = ExtResource("1_g1b28")

[connection signal="pressed" from="X" to="X" method="_on_pressed"]
[connection signal="value_changed" from="BGM Volume" to="BGM Volume" method="SetBGMVolume"]
[connection signal="value_changed" from="SFX Volume" to="SFX Volume" method="SetSFXVolume"]
[connection signal="value_changed" from="Master Volume" to="Master Volume" method="SetMasterVolume"]
